refactoring interaction with local storage after lecture, rather than using get and set item, use dot notation to set localStorage properties.

--- a/data/projects.json
+++ b/data/projects.json
@@ -1,6 +1,6 @@
 [
   {
-    "title": "Game Closet",
+    "title": "Broom Game Closet",
     "project": "game-closet",
     "previewImage": "preview-game-closet.png",
     "shortDesc": "I show up on hover",
